--- a/06-DOM/01-practica01/elementIdClass.html
+++ b/06-DOM/01-practica01/elementIdClass.html
@@ -20,7 +20,7 @@
 
 
 <img id="miImagen" src="imagen.png" width="300px"><br>
-<button>Cambiar</button><br><br>
+<button id="btnCambiar">Cambiar</button><br><br>
 
 <script src="app.js"></script>
 
